--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
+// {
+//   "presets": [
+//     [
+//       "@babel/preset-env",
+//       {
+//         "targets": {
+//           "node": "current"
+//         }
+//       }
+//     ]
+//   ]
+// }
 {
-  "presets": [
-    "@babel/preset-env"
-  ]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
