--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "anki-to-json": "^1.0.3",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
+    "node-zip": "^1.1.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
     "yargs": "^17.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0"
   }
 }
